Fix lost hover with gap with collapsed left menu

--- a/css/includes/components/_global-menu.scss
+++ b/css/includes/components/_global-menu.scss
@@ -206,6 +206,14 @@
                   z-index: 1060;
 
                   & + .dropdown-menu {
+                     &.animate__fadeInLeft:before {
+                        left: -2px;
+                        height: 100%;
+                        width: 4px;
+                        content: " ";
+                        position: absolute;
+                        background: transparent;
+                     }
                      background-color: $mainmenu-fg;
                      color: $mainmenu-bg;
                      top: 0;
